Fix panomara photos stretching out preview

--- a/services/front-end-service/src/main/resources/public/css/v2/search.css
+++ b/services/front-end-service/src/main/resources/public/css/v2/search.css
@@ -330,6 +330,7 @@ hr.sub-menu-divider {
     object-fit: fill;
     height: 100%;
     max-height: 150px;
+    max-width: 400px;
 }
 
 .search-result-image-preview-button {
